# corpus-preproc

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: devskim.yml  pr.yml  release.yml
src/: cli.rs  main.rs  pipeline.rs
src/cleaners/: html.rs
src/normalizers/: character.rs  encoding.rs  mod.rs  word.rs
src/server/: mod.rs
src/ucd/: bidi_class.rs  general_category.rs  mod.rs
