[package]
categories = ["command-line-utilities", "text-processing"]
name = "corpus-preproc"
description = "A preprocessor for text and HTML corpora"
keywords = ["cli", "corpus", "text", "preprocessing"]
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/dosjorge/corpus-preproc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.26.0"
kuchiki = "0.8.1"
regex = "1.5.4"
substring = "1.4.5"
walkdir = "2.3.2"
indicatif = "0.16.2"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.8.0"
rayon = "1.5.1"
num_cpus = "1.13.1"
clap = { version = "4.0.30", features = ["derive"] }
lazy_static = "1.4.0"
encoding_rs = "0.8.30"
ucd-trie = "0.1.3"
chardetng = "0.1.17"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
axum = { version = "0.4.5", features = ["headers", "multipart"] }
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
tower-http = { version = "0.2.1", features = ["full"] }
multer = { version = "2.0.2", features = ["tokio-io", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
bytes = { version = "1.1.0", features = ["serde"] }
